# ultra-low-latency-hft-engine

./: CMakeLists.txt  README.md  build_log.txt  cmake_log.txt  main.cpp  taskQuant  walkthrough!!!  walkthroughquant!!
analytics/: backtest_metrics.hpp  latency_monitor.hpp
core/: CMakeLists.txt  event_queue.hpp  events.hpp  latency_tracker.hpp  memory_pool.hpp  ring_buffer.hpp  thread_utils.hpp  timer_utils.hpp
data/: market_data_record.csv
exchange/: matching_engine.cpp  matching_engine.hpp
execution/: CMakeLists.txt  execution_engine.cpp  execution_engine.hpp
feed/: CMakeLists.txt  hybrid_feed.hpp  imarket_feed.hpp  websocket_client.cpp  websocket_client.hpp
oms/: order_manager.cpp  order_manager.hpp
orderbook/: CMakeLists.txt  order_book.cpp  order_book.hpp
parser/: CMakeLists.txt  trade_parser.cpp  trade_parser.hpp
pnl/: CMakeLists.txt  pnl_engine.cpp  pnl_engine.hpp
replay/: CMakeLists.txt  market_data_recorder.cpp  market_data_recorder.hpp  replay_engine.cpp  replay_engine.hpp
risk/: CMakeLists.txt  risk_engine.cpp  risk_engine.hpp
scripts/: run_benchmark.ps1
strategy/: CMakeLists.txt  istrategy.hpp  market_maker_strategy.hpp  momentum_strategy.hpp  strategy_engine.cpp  strategy_engine.hpp
tests/: benchmarks.cpp
ui/: CMakeLists.txt  terminal_ui.cpp  terminal_ui.hpp
